--- a/css/confs.css
+++ b/css/confs.css
@@ -1,8 +1,11 @@
+/*
 body {
    background-color: black;
    padding-left: 2rem;
    padding-right: 2rem;
 }
+
+*/
 .logo-img {
    height: 60px;
 }
@@ -33,4 +36,19 @@ body {
    position: absolute;
    top: 0px;
    right: 0px;
+}
+
+#confs {
+   position: relative;
+}
+
+#fondo {
+   position: relative;
+   opacity: 0.7;
+}
+
+#descripcion {
+   position: absolute;
+   top: 500px;
+   right: 70px;
 }
